--- a/project-build/app/index.html
+++ b/project-build/app/index.html
@@ -9,6 +9,37 @@
     <link rel="stylesheet" href="css/reset.css" type="text/css" media="screen">
     <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
     <link rel="stylesheet" href="css/grid.css" type="text/css" media="screen">
+
+
+    <script src="lib/common/jquery-1.6.2.min.js"></script>
+
+
+
+
+    <script src="lib/common/jquery.easing.1.3.js" type="text/javascript"></script>
+    <script src="lib/common/jcarousellite_1.0.1.js" type="text/javascript"></script>
+    <script src="lib/common/jquery.galleriffic.js" type="text/javascript"></script>
+    <script src="lib/common/jquery.opacityrollover.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $(".jCarouselLite").jCarouselLite({
+                btnNext: ".next",
+                btnPrev: ".prev",
+                speed: 400,
+                vertical: false,
+                circular: true,
+                easing:'easeOutQuart',
+                visible: 4,
+                start: 0,
+                scroll: 1
+            });
+        });
+    </script>
+
+
+
+
+
 </head>
 <body>
 
@@ -16,15 +47,15 @@
     <!--<a href="#/view1" class="btn">view1</a>-->
     <!--<a href="#/view2" class="btn">view2</a>-->
 <!--</div>-->
-<header>
+<header ng-controller="indexController">
     <div class="row-1">
         <div class="main">
             <div class="container_12">
                 <div class="grid_12">
                     <nav>
                         <ul class="menu">
-                            <li><a class="active" href="#/aboutus">About Us</a></li>
-                            <li><a  href="#/services">Services</a></li>
+                            <li><a  href="#/aboutus">About Us</a></li>
+                            <li><a class="{{focusclass}}" href="#/services">Services</a></li>
                             <li><a  href="#/catalogue">Catalogue</a></li>
                             <li><a  href="#/pricing">Pricing</a></li>
                             <li><a  href="#/contacts">Contacts</a></li>
@@ -59,7 +90,10 @@
         </div>
     </div>
 </header>
-<div ng-view class="well well-small">
+
+<!-- content -->
+
+<div ng-view >
 </div>
 
 <!--==============================footer=================================-->
@@ -89,7 +123,7 @@
 </footer>
 <script type="text/javascript">
     $(window).load(function() {
-        alert($('div.navigation'));
+
         // We only want these styles applied when javascript is enabled
         $('div.navigation').css({'width' : '320px', 'float' : 'right'});
         $('div.content').css('display', 'block');
@@ -103,6 +137,7 @@
             fadeSpeed:         'fast',
             exemptionSelector: '.selected'
         });
+
 
         // Initialize Advanced Galleriffic Gallery
         var gallery = $('#thumbs').galleriffic({
@@ -143,8 +178,6 @@
 </script>
 <script data-main="js/main" src="lib/require/require.js"></script>
 
-<script>
-  //  alert($());
-</script>
+
 </body>
 </html>
