--- a/project-build/app/index.html
+++ b/project-build/app/index.html
@@ -10,12 +10,9 @@
     <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
     <link rel="stylesheet" href="css/grid.css" type="text/css" media="screen">
 
+    <script data-main="js/main" src="lib/require/require.js"></script>
 
-    <script src="lib/common/jquery-1.6.2.min.js"></script>
-
-
-
-
+    <script src="lib/jquery/jquery.js"></script>
     <script src="lib/common/jquery.easing.1.3.js" type="text/javascript"></script>
     <script src="lib/common/jcarousellite_1.0.1.js" type="text/javascript"></script>
     <script src="lib/common/jquery.galleriffic.js" type="text/javascript"></script>
@@ -36,17 +33,9 @@
         });
     </script>
 
-
-
-
-
 </head>
 <body>
 
-<!--<div>-->
-    <!--<a href="#/view1" class="btn">view1</a>-->
-    <!--<a href="#/view2" class="btn">view2</a>-->
-<!--</div>-->
 <header ng-controller="indexController">
     <div class="row-1">
         <div class="main">
@@ -121,63 +110,6 @@
         </div>
     </div>
 </footer>
-<script type="text/javascript">
-    $(window).load(function() {
-
-        // We only want these styles applied when javascript is enabled
-        $('div.navigation').css({'width' : '320px', 'float' : 'right'});
-        $('div.content').css('display', 'block');
-
-        // Initially set opacity on thumbs and add
-        // additional styling for hover effect on thumbs
-        var onMouseOutOpacity = 0.5;
-        $('#thumbs ul.thumbs li span').opacityrollover({
-            mouseOutOpacity:   onMouseOutOpacity,
-            mouseOverOpacity:  0.0,
-            fadeSpeed:         'fast',
-            exemptionSelector: '.selected'
-        });
-
-
-        // Initialize Advanced Galleriffic Gallery
-        var gallery = $('#thumbs').galleriffic({
-            delay:                     7000,
-            numThumbs:                 12,
-            preloadAhead:              6,
-            enableTopPager:            false,
-            enableBottomPager:         false,
-            imageContainerSel:         '#slideshow',
-            controlsContainerSel:      '',
-            captionContainerSel:       '',
-            loadingContainerSel:       '',
-            renderSSControls:          true,
-            renderNavControls:         true,
-            playLinkText:              'Play Slideshow',
-            pauseLinkText:             'Pause Slideshow',
-            prevLinkText:              'Prev',
-            nextLinkText:              'Next',
-            nextPageLinkText:          'Next',
-            prevPageLinkText:          'Prev',
-            enableHistory:             true,
-            autoStart:                 7000,
-            syncTransitions:           true,
-            defaultTransitionDuration: 900,
-            onSlideChange:             function(prevIndex, nextIndex) {
-                // 'this' refers to the gallery, which is an extension of $('#thumbs')
-                this.find('ul.thumbs li span')
-                        .css({opacity:0.5})
-            },
-            onPageTransitionOut:       function(callback) {
-                this.find('ul.thumbs li span').css({display:'block'});
-            },
-            onPageTransitionIn:        function() {
-                this.find('ul.thumbs li span').css({display:'none'});
-            }
-        });
-    });
-</script>
-<script data-main="js/main" src="lib/require/require.js"></script>
-
 
 </body>
 </html>
